--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,8 +7,8 @@ spring:
         role: ADMIN
     datasource:
         url: jdbc:mysql://localhost/BlazeDemo?useSSL=false
-        username:
-        password:
+        username: root
+        password: B00Xware
         driver-class-name: com.mysql.jdbc.Driver
         testWhileIdle: true
         validationQuery: SELECT 1
