--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,7 @@ language: java
 jdk:
   - oraclejdk8
 script:
-  gradle clean check
+  gradle clean check -Dspring.profiles.active=test
+cache:
+  directories:
+    - $HOME/.m2
