Added BDD coverage

--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,9 @@ dependencies {
     compile group: 'io.rest-assured', name: 'rest-assured', version: '3.0.3'
     compile group: 'io.rest-assured', name: 'json-schema-validator', version: '3.0.3'
 
+    compile group: 'info.cukes', name: 'cucumber-spring', version: '1.2.5'
+    compile group: 'info.cukes', name: 'cucumber-junit', version: '1.2.5'
+
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
     testCompile group: 'org.springframework.security', name: 'spring-security-test'
     testCompile group: 'junit', name: 'junit'
