--- a/build.gradle
+++ b/build.gradle
@@ -73,6 +73,7 @@ dependencies {
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.7.0'
 
     compile group: 'org.codehaus.groovy.modules.http-builder', name: 'http-builder', version: '0.7.1'
+    compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '2.41.0'
 
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
     testCompile group: 'org.springframework.security', name: 'spring-security-test'
@@ -83,6 +84,7 @@ dependencies {
     testCompile group: 'io.gatling', name: 'gatling-jdbc', version: '2.2.5'
     testCompile group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.4'
     testCompile group: 'org.spockframework', name: 'spock-spring', version: '1.1-groovy-2.4'
+
 }
 
 task loadTest(type: JavaExec) {
